--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,9 @@
   "author": "WE_06",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.1.0",
+    "async-waterfall": "^0.1.5",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.7"
